# special-relativity-web

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle.js  hello.html  index.html  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.ts
20240427/: index.html
20240530/: index.html
20240706/: bundle.js  index.html
20240720/: bundle.js  index.html
20240803/: bundle.js  index.html
20240810/: bundle.js  index.html
20241102/: bundle.js  index.html
app/: Cargo.toml
app/src/: backend.rs  key.rs  lib.rs  player.rs  vertex_shader.glsl
app/src/assets/: fragment_shader.glsl  vertex_shader.glsl
color/: Cargo.toml
color/src/: lib.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  shader_lighting.rs  shader_lorentz.rs  shader_simple.rs  shape.rs
crates/backend/src/glsl/: lighting_vertex_shader.glsl  lorentz_vertex_shader.glsl  simple_vertex_shader.glsl
crates/color/: color_swatch.csv  gen_color.py
crates/color/src/: lib.rs
crates/rmath/: Cargo.toml
crates/rmath/src/: electromagnetism.rs  lib.rs  matrix.rs  mechanics.rs  quaternion.rs  vector.rs  world_line.rs
crates/shape/: Cargo.toml
crates/shape/examples/: arrow.rs  cube.rs  icosahedron.rs
crates/shape/src/: arrow.rs  cube.rs  icosahedron.rs  lib.rs
crates/special-relativity-rs/: Cargo.toml
crates/special-relativity-rs/src/: backend.rs  lib.rs
dev/: bundle.js  index.html
public/: index.html
rmath/: Cargo.toml
rmath/src/: angle.rs  lib.rs  matrix.rs  quaternion.rs  vector.rs
src/: app.rs  backend.rs  charge_set.rs  key.rs  lib.rs  main.tsx  player.rs  vertex_shader.glsl
src/assets/: lorentz_vertex_shader.glsl
src/backend/: shader_lighting.rs  shader_lorentz.rs  shader_simple.rs  shape.rs
src/backend/glsl/: just_vertex_shader.glsl  lighting_fragment_shader.glsl  lighting_vertex_shader.glsl
src/components/: App.tsx  SpecialRelativity.tsx
