[workspace]
members = [
    ".",
    "crates/color",
    "crates/rmath",
    "crates/shape",
]
resolver = "2"

[package]
name = "special-relativity-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bytemuck = "1.14"
glow = "0.13"
js-sys = "0.3"
memoffset = "0.9"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-timer = "0.2.5"
rand = "0.8"
rand_pcg = "0.3"
getrandom = { version = "0.2", features = ["js"] }

color = { path = "crates/color" }
rmath = { path = "crates/rmath" }
shape = { path = "crates/shape" }

[dependencies.web-sys]
version = "0.3.64"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
