[workspace]
members = [
    ".",
    "crates/color",
    "crates/rmath",
    "crates/shape",
]
resolver = "2"

[package]
name = "special-relativity-rs"
version = "0.1.0"
edition = "2021"

description = "special relativity game"
repository = "https://github.com/sogebu/special-relativity-web"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
bytemuck = "1.14"
glow = "0.13"
js-sys = "0.3"
memoffset = "0.9"
wasm-bindgen = "0.2"
rand = "0.8"
rand_pcg = "0.3"
getrandom = { version = "0.2", features = ["js"] }

color = { path = "crates/color" }
rmath = { path = "crates/rmath" }
shape = { path = "crates/shape" }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'WebGlBuffer',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
