[package]
name = "special-relativity-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bytemuck = "1.14"
glow = "0.12.3"
js-sys = "0.3"
memoffset = "0.9"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-timer = "0.2.5"

color = { path = "../color" }
rmath = { path = "../rmath" }

[dependencies.web-sys]
version = "0.3.64"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
